--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-type-animation": "^3.0.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "text-encoding": "^0.7.0"
   }
 }
